; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_storage32.c_OLECONVERT_CreateOle10NativeStream.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_storage32.c_OLECONVERT_CreateOle10NativeStream.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OLECONVERT_CreateOle10NativeStream.wstrStreamName = internal constant [13 x i32] [i32 1, i32 79, i32 108, i32 101, i32 49, i32 48, i32 78, i32 97, i32 116, i32 105, i32 118, i32 101, i32 0], align 16
@STGM_CREATE = common dso_local global i32 0, align 4
@STGM_WRITE = common dso_local global i32 0, align 4
@STGM_SHARE_EXCLUSIVE = common dso_local global i32 0, align 4
@S_OK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*, i32)* @OLECONVERT_CreateOle10NativeStream to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @OLECONVERT_CreateOle10NativeStream(i32 %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @STGM_CREATE, align 4
  %11 = load i32, i32* @STGM_WRITE, align 4
  %12 = or i32 %10, %11
  %13 = load i32, i32* @STGM_SHARE_EXCLUSIVE, align 4
  %14 = or i32 %12, %13
  %15 = call i64 @IStorage_CreateStream(i32 %9, i32* getelementptr inbounds ([13 x i32], [13 x i32]* @OLECONVERT_CreateOle10NativeStream.wstrStreamName, i64 0, i64 0), i32 %14, i32 0, i32 0, i32** %8)
  store i64 %15, i64* %7, align 8
  %16 = load i64, i64* %7, align 8
  %17 = load i64, i64* @S_OK, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %28

19:                                               ; preds = %3
  %20 = load i32*, i32** %8, align 8
  %21 = call i64 @IStream_Write(i32* %20, i32* %6, i32 4, i32* null)
  store i64 %21, i64* %7, align 8
  %22 = load i32*, i32** %8, align 8
  %23 = load i32*, i32** %5, align 8
  %24 = load i32, i32* %6, align 4
  %25 = call i64 @IStream_Write(i32* %22, i32* %23, i32 %24, i32* null)
  store i64 %25, i64* %7, align 8
  %26 = load i32*, i32** %8, align 8
  %27 = call i32 @IStream_Release(i32* %26)
  br label %28

28:                                               ; preds = %19, %3
  ret void
}

declare dso_local i64 @IStorage_CreateStream(i32, i32*, i32, i32, i32, i32**) #1

declare dso_local i64 @IStream_Write(i32*, i32*, i32, i32*) #1

declare dso_local i32 @IStream_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
